diff background images on page

--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -20,7 +20,7 @@
   <title>Empire Rentals</title>
 </head>
 
-<body>
+<body class="home">
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand"
       href="file:///Users/miguelcruz/Desktop/Projects/Project2/empireRentals/public/HTML/index.html">
